--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
 		"type-check": "tsc"
 	},
 	"dependencies": {
-		"@fortawesome/free-solid-svg-icons": "^6.4.0",
-		"@fortawesome/react-fontawesome": "^0.2.0",
+		"@fortawesome/free-solid-svg-icons": "6.4.0",
+		"@fortawesome/react-fontawesome": "0.2.0",
 		"next": "latest",
 		"react": "18.2.0",
 		"react-dom": "18.2.0"
