--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
 	"dependencies": {
 		"@fortawesome/free-solid-svg-icons": "6.4.0",
 		"@fortawesome/react-fontawesome": "0.2.0",
+		"@reduxjs/toolkit": "^1.9.5",
 		"font-awesome": "4.7.0",
 		"next": "latest",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
-		"react-transition-group": "4.4.5"
+		"react-redux": "^8.0.5",
+		"react-transition-group": "4.4.5",
+		"redux": "^4.2.1"
 	},
 	"devDependencies": {
 		"@types/node": "12.12.21",
